@@ -1,3 +1,6 @@
+[B]1.0.5[/B]
+- switch tmdb scraper to chain tmdb scraper library functions
+
 [B]1.0.4[/B]
 - replace dtrailer.com with HD-Trailers.net for trailer scraping
 
